# corelm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_all.sh
.github/: PULL_REQUEST_TEMPLATE.md
benches/: reporting.py  runner.py  scenario_loader.py
corelm/: __init__.py  adapter.py  base.py  baselines.py  cli.py  metrics.py  oracle_kernel.py  product.py  reference_kernel.py  schema.py  utils.py
docs/: ADAPTER_SUPPORT_MATRIX.md  BENCHMARK_PROFILES.md  COMPRESSION_INSPECTOR.md  CONNECTORS.md  DELIVERY_PLAN.md  DETERMINISM_INSPECTOR.md  DIRECT_RUNTIME_BENCHMARK_PLAN.md  GAP_ANALYSIS.md  METRICS.md  METRICS_AND_COMPRESSION_GAP_PLAN.md  METRIC_CATALOG.md  QUALITY_EVAL.md  REPOSITORY_VERIFICATION_AND_SELF_CONTAINED_RUNTIME_AUDIT.md  RUNTIME_TELEMETRY.md  STRICT_BENCHMARK_POLICY.md  WINDOWS_BUILD_DIRECT.md  WORKFLOWS.md  acceptance_criteria.md  api_contract.md  architecture.md  architecture_decisions.md  archive_checklist.md  archive_manifest.md  claim_discipline.md  deployment_runbook.md  implementation_plan.md  license_status.md  limitations_and_scope.md  maintenance_guide.md  manuscript.md  operating_habits.md  pricing_and_packaging.md  product_prd.md  publication_summary.md  quickstart.md  release_notes.md  reproducibility_guide.md  risk_register.md  sales_faq.md  sales_one_pager.md  (+3 more)
examples/: demo_commands.sh  demo_session.json
reports/: archive_checksums.txt  (+13 more)
(+102 files in other folders)
