[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corelm-full-spectrum-kit"
version = "1.3.0"
description = "Core LM research artifact, archive bundle, sales kit, and local reference product"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Core LM Authors" }
]
keywords = ["memory", "benchmark", "deterministic", "replay", "provenance", "llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: Other/Proprietary License",
]
dependencies = [
  "numpy>=1.24",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
corelm = "corelm.cli:main"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["corelm*", "benches*", "services*"]
exclude = ["reports*", "docs*", "tests*", "examples*", "tools*", "build*", "dist*", "apps*", "packages*"]

[tool.setuptools.package-data]
benches = ["scenarios/*.json"]
